--- a/css/imports/content.css
+++ b/css/imports/content.css
@@ -57,6 +57,12 @@ article.type-post {
 	margin-bottom: 4rem;
 }
 
+.type-page > * {
+	max-width: 640px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .multiple .type-like {
 	display: flex;
 	flex-direction: column;
