--- a/style.css
+++ b/style.css
@@ -15,22 +15,14 @@ you've learned with others.
 */
 
 @font-face {
-	font-family: montserrat;
+	font-family: inter;
 	font-display: fallback;
 	font-weight: 300 400 700 900;
-	src: url(./fonts/Montserrat-VariableFont_wght.ttf) format("woff2");
-}
-
-@font-face {
-	font-family: montserrat;
-	font-display: fallback;
-	font-style: italic;
-	font-weight: 300 400 700 900;
-	src: url(./fonts/Montserrat-Italic-VariableFont_wght.ttf) format("woff2");
+	src: url(./fonts/Inter-VariableFont_slnt,wght.ttf) format("woff2");
 }
 
 :root {
-	--sans-serif: montserrat, sans-serif;
+	--sans-serif: inter, sans-serif;
 	--font-size-base: 1rem;
 	--font-size-default: 1.125rem;
 	--color-background: #f6f6f6;
@@ -66,13 +58,6 @@ body {
 	margin: 0;
 }
 
-@media screen and (max-width: 800px) {
-
-	body {
-		font-size: var(--font-size-base);
-	}
-}
-
 a {
 	color: var(--color-link);
 }
@@ -92,6 +77,10 @@ main {
 }
 
 @media (max-width: 800px) {
+
+	body {
+		font-size: var(--font-size-base);
+	}
 
 	main {
 		max-width: calc(100% - 2rem);
@@ -119,6 +108,11 @@ article header a {
 
 article header a:hover {
 	color: var(--color-link);
+}
+
+article header h1 {
+	margin-left: -19rem;
+	margin-bottom: 0;
 }
 
 article footer {
@@ -274,6 +268,7 @@ iframe {
 }
 
 article.type-post {
+	margin-top: 3rem;
 	margin-bottom: 5rem;
 	width: calc(100% - 2rem);
 	margin-left: auto;
@@ -526,13 +521,8 @@ ul.wp-block-latest-posts {
 }
 
 .published-wrapper {
-	max-width: 640px;
-	margin: -1rem auto 2rem auto;
-	text-align: right;
-}
-
-.published-wrapper time {
-	background-color: #e1e1e1;
-	border-bottom: 0.25rem solid #c9a;
-	padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+	display: flex;
+	flex-direction: column;
+	margin-left: calc(50vw - 640px);
+	color: var(--color-foreground);
 }
