--- a/style.css
+++ b/style.css
@@ -18,16 +18,34 @@ you've learned with others.
 	font-family: inter;
 	font-display: fallback;
 	font-weight: 300 400 700 900;
-	src: url(./fonts/Inter-VariableFont_slnt,wght.ttf) format("woff2");
+	src: url(./fonts/Inter-VariableFont_slnt,wght.woff2) format("woff2");
+}
+
+@font-face {
+	font-family: monaspace;
+	font-display: fallback;
+	font-weight: 300;
+	src: url(./fonts/MonaspaceArgon-Regular.woff) format("woff");
 }
 
 :root {
 	--sans-serif: inter, sans-serif;
+	--monospace: monaspace, monospace;
+
 	--font-size-base: 1rem;
 	--font-size-default: 1.125rem;
+	--font-size-content-heading: 1.5rem;
+
+	--content-width: 640px;
+
+	--spacing-base: 1rem;
+	--spacing-default: 3rem;
+	--spacing-large: 6rem;
+
 	--color-background: #f6f6f6;
 	--color-foreground: #222;
 	--color-content-background: #f9f9f9;
+	--color-code-background: #e3e3e3;
 	--color-border-default: #ddd;
 	--color-link: #2271b1;
 	--color-context-reply: rgb(127, 255, 212);
@@ -39,6 +57,7 @@ you've learned with others.
 		--color-background: #222;
 		--color-foreground: #f6f6f6;
 		--color-content-background: #343434;
+		--color-code-background: #434343;
 		--color-border-default: #888;
 		--color-link: #00c2e1;
 	}
@@ -63,17 +82,21 @@ a {
 }
 
 header {
-	width: calc(100% - 2rem);
+	width: calc(100% - var(--spacing-default));
 }
 
 header,
 section {
-	max-width: 640px;
+	max-width: var(--content-width);
 	margin: 0 auto;
 }
 
 main {
 	min-height: calc(100% - 375px);
+}
+
+article {
+	margin-top: var(--spacing-large);
 }
 
 @media (max-width: 800px) {
@@ -83,7 +106,7 @@ main {
 	}
 
 	main {
-		max-width: calc(100% - 2rem);
+		max-width: calc(100% - var(--spacing-default));
 		margin-left: auto;
 		margin-right: auto;
 	}
@@ -103,7 +126,7 @@ article header {
 }
 
 article header a {
-	color: #333;
+	color: var(--color-foreground);
 }
 
 article header a:hover {
@@ -111,13 +134,13 @@ article header a:hover {
 }
 
 article header h1 {
-	margin-left: -19rem;
+	margin-left: -20rem;
 	margin-bottom: 0;
 }
 
 article footer {
-	width: 640px;
-	margin: 3rem auto 0;
+	width: var(--content-width);
+	margin: var(--spacing-default) auto 0;
 	max-width: 100%;
 }
 
@@ -130,24 +153,55 @@ nav ul {
 	flex-wrap: wrap;
 	flex-direction: row;
 	list-style: none;
-	margin: 1rem 0 0;
+	margin: var(--spacing-base) 0 0;
 	padding: 0;
 }
 
 nav ul li {
 	padding: 0;
-	margin: 0 1rem 0 0;
+	margin: 0 var(--spacing-base) 0 0;
 	font-weight: 700;
 }
 
 h2 {
-	font-size: 1.5rem;
-	margin-top: 3rem;
-	margin-bottom: 1rem;
+	font-size: var(--font-size-content-heading);
+	margin-top: var(--spacing-default);
+	margin-bottom: var(--spacing-base);
+	font-weight: 900;
+}
+
+pre,
+code {
+	font-family: var(--monospace);
+	font-size: 15px;
+	background: var(--color-code-background);
+	line-height: 1.4;
+	padding: 0.25rem 0.25rem 0.15rem;
 }
 
 pre {
+	background: var(--color-background);
+	border-left: 6px solid var(--color-code-background);
 	white-space: break-spaces;
+	padding: var(--spacing-base) calc(var(--spacing-default) - 6px);
+	margin: var(--spacing-default) 0;
+}
+
+blockquote {
+	font-size: 0.95rem;
+	font-style: italic;
+	border-left: 6px solid var(--color-code-background);
+	padding: 0 calc(var(--spacing-default) - 6px) var(--spacing-base);
+	margin: var(--spacing-default) 0;
+}
+
+blockquote p {
+	margin-bottom: 0;
+}
+
+blockquote cite {
+	display: inline-block;
+	margin-top: var(--spacing-base);
 }
 
 img {
@@ -188,7 +242,7 @@ main ~ footer {
 }
 
 main ~ footer div {
-	margin-bottom: 1rem;
+	margin-bottom: var(--spacing-base);
 }
 
 main ~ footer a {
@@ -199,18 +253,12 @@ main ~ footer a:hover {
 	color: #ddd;
 }
 
-blockquote {
-	font-size: 0.95rem;
-	font-style: italic;
-	border-left: 4px solid #444;
-	padding-left: 1rem;
-}
-
 cite {
 	font-style: initial;
 	font-weight: 600;
 }
 
+.day,
 time {
 	font-size: 0.9rem;
 }
@@ -249,128 +297,19 @@ iframe {
 	z-index: 100000;
 }
 
-.site-branding p:first-of-type:first-child {
-	font-size: 2.25rem;
-	font-weight: 700;
-	margin-top: 1.525rem;
-	margin-bottom: 1.475rem;
-}
-
-.weekly-preview {
-	list-style: none;
-	margin-bottom: 1.25rem;
-	padding-left: 0;
-}
-
-.type-post {
-	position: relative;
-	padding-top: 0.5rem;
-}
-
-article.type-post {
-	margin-top: 3rem;
-	margin-bottom: 5rem;
-	width: calc(100% - 2rem);
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.multiple article {
-	margin-bottom: 4rem;
-}
-
-.type-page > * {
-	max-width: 640px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.multiple .type-like .entry-content {
-	display: list-item;
-	list-style: disclosure-closed;
-	padding-left: 0.25rem;
-}
-
-.multiple .type-like .entry-content p {
-	margin-top: 0;
-	margin-bottom: 0.15rem;
-}
-
-.multiple .type-like .entry-footer {
-	margin-top: 0;
-}
-
-.multiple .type-like .entry-footer p {
-	margin: 0;
-}
-
-.multiple .type-like time {
-	font-size: 0.85rem;
-	padding-left: 0.25rem;
-}
-
-.single .type-shortnote {
-	margin-top: 4rem;
-}
-
-.multiple .type-like,
-.type-shortnote .entry-content,
-.single .type-like .entry-content {
-	background: var(--color-content-background);
-	padding: 0.75rem;
-	border: 1px solid var(--color-border-default);
-	margin: 0 auto 2rem;
-	font-size: 1rem;
-	max-width: 640px;
-}
-
-.multiple .type-like {
-	border: none;
-	margin-bottom: 0.25rem;
-}
-
-section.wp-block-latest-posts {
-	max-width: 100%;
-}
-
-.multiple .has-image {
-	border: 0;
-	padding: 0;
-}
-
-.multiple .has-image .entry-content {
-	background-color: var(--color-background);
-	max-width: 900px;
-	border: 0;
-}
-
-.multiple .has-image figure {
-	width: 100%;
-	margin-top: 0;
-}
-
-.multiple .type-shortnote footer {
-	margin-top: 0;
-}
-
-ul.wp-block-latest-posts {
-	padding-left: 0;
-	list-style: none;
-}
-
-.entry-content > * {
-	max-width: 640px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
 .has-text-align-center {
 	text-align: center;
 }
 
+.entry-content > * {
+	max-width: var(--content-width);
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .entry-content > figure {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
+	margin-top: var(--spacing-default);
+	margin-bottom: var(--spacing-default);
 }
 
 .entry-content .size-large {
@@ -378,151 +317,31 @@ ul.wp-block-latest-posts {
 	height: auto;
 }
 
-.entry-content figure {
-	margin-top: 2rem;
-	margin-bottom: 2rem;
-}
-
-.wp-block-code {
-	max-width: calc(100vw - 2rem);
-	font-size: 0.9rem;
-	width: fit-content;
-}
-
-.wp-block-gallery figure {
-	margin-top: 0;
-	margin-bottom: 0;
-	margin-left: 0;
-	margin-right: 0;
-}
-
-.is-layout-flex.wp-block-gallery {
-	display: flex;
-	gap: 1rem;
-}
-
-.wp-block-post-author {
-	display: flex;
-	margin-top: 2rem;
-}
-
-.wp-block-post-author__avatar {
-	width: 96px;
-}
-
-.wp-block-post-author__content {
-	width: calc(100% - 96px);
-	margin-left: 1rem;
-	margin-top: 0;
-}
-
-.wp-block-post-author__content p:first-of-type {
-	margin-top: 0;
-}
-
-.author-bio {
-	display: flex;
-	width: 640px;
-	max-width: 100%;
-	margin: 1rem auto 0 auto;
-	justify-content: space-evenly;
-}
-
-.author-bio img {
-	width: 150px;
-	height: 100%;
-}
-
-.author-bio-content {
-	padding: 0 1rem;
-	flex-basis: fit-content;
-}
-
-.author-bio-content p {
-	margin-top: 0;
-}
-
-.posts-navigation {
-	max-width: 640px;
-	margin: 3rem auto;
-	display: flex;
-	justify-content: space-between;
-	font-size: 1.35rem;
-}
-
-.shortnotes-reply-to {
-	font-style: italic;
-	max-width: 640px;
-	margin: 0 auto 1rem;
-	font-weight: 500;
-	border-left: 11px solid var(--color-context-reply);
-	padding-left: 1rem;
-}
-
-.reaction {
-	display: flex;
-}
-
-.reaction img {
-	width: 64px;
-}
-
-.reaction span {
-	padding-left: 1rem;
-	width: 100%;
-}
-
-.comment {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: center;
-	border: 1px solid var(--color-context-reply);
-	padding: 1rem;
-	margin-top: 1rem;
-}
-
-.comment img {
-	width: 64px;
-	margin-right: 1rem;
-}
-
-.reaction time,
-.comment time {
-	font-size: 1rem;
-}
-
-.comment-form label {
-	display: block;
-	font-weight: 600;
-}
-
-.comment-form input,
-.comment-form textarea {
-	font-size: 1rem;
-	line-height: 1.5;
-	padding: 1rem;
-	width: 95%;
-	font-family: var(--sans-serif);
-}
-
-.comment-form input {
-	padding: 0.5rem 1rem;
-}
-
-.comment-form .submit {
-	margin: 1rem 0;
-	width: 200px;
-	background: var(--color-context-reply);
-	border: 1px solid #333;
-}
-
-.edit-link {
-	margin-right: 1rem;
-}
-
 .published-wrapper {
 	display: flex;
 	flex-direction: column;
-	margin-left: calc(50vw - 640px);
+	margin-left: calc(50vw - var(--content-width));
 	color: var(--color-foreground);
+}
+
+@media screen and (max-width: 1400px) {
+
+	article header h1 {
+		margin-left: 0;
+	}
+
+	.published-wrapper {
+		max-width: var(--content-width);
+		margin-left: auto;
+		margin-right: auto;
+		margin-bottom: 3rem;
+	}
+}
+
+.multiple .published-wrapper {
+	margin-bottom: 0;
+}
+
+.multiple article {
+	margin-bottom: 4rem;
 }
