--- a/style.css
+++ b/style.css
@@ -460,9 +460,9 @@ iframe {
 
 .multiple .type-like,
 .multiple .type-shortnote,
-.multiple .type-post {
+.multiple article.type-post {
 	display: grid;
-	grid-template-columns: [date] 225px [content] calc(var(--content-width-wide) - 225px);
+	grid-template-columns: [date] calc((var(--content-width-wide) - var(--content-width))/2) [content] var(--content-width);
 	grid-template-rows: [first] min-content [second] auto;
 	width: var(--content-width-wide);
 	margin-left: auto;
@@ -553,11 +553,13 @@ iframe {
 	margin-bottom: var(--spacing-default);
 }
 
+.type-like .more-likes ul,
 .type-shortnote .more-notes ul {
 	padding-left: 0;
 	margin: 0;
 }
 
+.type-like .more-likes li,
 .type-shortnote .more-notes li {
 	list-style: none;
 	margin-bottom: 0.5rem;
@@ -571,14 +573,17 @@ iframe {
 	line-height: 1.55;
 }
 
+.type-like .more-likes li time,
 .type-shortnote .more-notes li time {
 	font-size: var(--font-size-base);
 }
 
+.more-likes,
 .more-notes {
 	margin-top: var(--spacing-base);
 }
 
+.more-likes h2,
 .more-notes h2 {
 	margin-top: 0;
 	border-top: 1px solid var(--color-border-default);
@@ -596,6 +601,11 @@ iframe {
 ul.wp-block-latest-posts {
 	padding-left: 0;
 	list-style: none;
+}
+
+.posts-navigation {
+	max-width: var(--content-width);
+	margin: var(--spacing-large) auto var(--spacing-default);
 }
 
 .site-footer > * {
