--- a/style.css
+++ b/style.css
@@ -221,6 +221,13 @@ blockquote {
 	margin: var(--spacing-default) 0;
 }
 
+@media screen and (max-width: 700px) {
+
+	blockquote {
+		padding: 0 var(--spacing-base) var(--spacing-base);
+	}
+}
+
 blockquote p {
 	margin-bottom: 0;
 }
