Center text in the colophon

--- a/editor-style.css
+++ b/editor-style.css
@@ -692,13 +692,12 @@ iframe {
 	max-width: calc(100% - var(--spacing-default));
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
 }
 
 .site-footer section > * {
 	max-width: 640px;
 	max-width: var(--content-width);
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .multiple .type-shortnote > .entry-content > * {
