Brighten up the place a bit

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ you've learned with others.
 	--spacing-default: 3rem;
 	--spacing-large: 6rem;
 
-	--color-background: #f6f6f6;
+	--color-background: #fbfbfb;
 	--color-foreground: #222;
 	--color-faded: #666;
 	--color-content-background: #f9f9f9;
