Add some spacing between posts on the home page

--- a/style.css
+++ b/style.css
@@ -669,6 +669,7 @@ iframe {
 	padding-top: var(--spacing-base);
 }
 
+.wp-block-latest-posts .type-post,
 .weekly-preview {
 	margin-bottom: var(--spacing-base);
 }
